src/unit_tests/CustSemantics/fail/cls_self_type.cl
class Main { main() : Int {1}; };

class SELF_TYPE {};